# myproject1

./: .gitignore  README.md  data_analyzer.py  pyproject.toml  test_app.py  test_types.py
.github/workflows/: ci.yml
